--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,6 @@
 set(srcs "main.c"
-         "mpu6500_lib.c")
+         "mpu6500_lib.c"
+         "KalmanFilter.c")
 set(include_dirs ".")
 
 idf_component_register(SRCS "${srcs}"
