--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,7 @@
 set(srcs "main.c"
          "mpu6500_lib.c"
-         "spi_driver.c")
+         "spi_driver.c"
+         "kalman_filter.c")
 set(include_dirs ".")
 
 idf_component_register(SRCS "${srcs}"
